add placeholder functionality + button form, not yet embedded + corrected contact email

--- a/committee.html
+++ b/committee.html
@@ -65,7 +65,7 @@
                 <a href="./sign-up.html">Sign up </a>
                 <a href="https://ucsa.org.nz/clubs/browse/"> Other Clubs </a>
                 <a href="faq.html"> FAQ! </a>
-                <div>contact us at @ucbclub@gmail.com</div>
+                <div>contact us at ucbclub@gmail.com</div>
             </div>
               
             <!-- Use any element to open the sidenav -->
@@ -132,7 +132,7 @@
     </div>  
 
     <div class="footer">
-        <div> contact us @ucbclub@gmail.com</div>
+        <div> contact us at ucbclub@gmail.com</div>
         <div class="footer-text"> Copyright <span>&#169;</span> UC badminton club</div>
     </div>
    
