--- a/sign-up.html
+++ b/sign-up.html
@@ -65,7 +65,7 @@
                 <a href="./sign-up.html">Sign up </a>
                 <a  href="https://ucsa.org.nz/clubs/browse/"> Other Clubs </a>
                 <a  href="faq.html"> FAQ! </a>
-                <div>contact us at @ucbclub@gmail.com</div>
+                <div>contact us at ucbclub@gmail.com</div>
             </div>
               
             <!-- Use any element to open the sidenav -->
@@ -83,18 +83,24 @@
         </div>
     </div>
  
+    <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfWiWEX3zt3RtvG41N863COoI2XUHkDzsOWN1Kw3V7C0F9vuQ/viewform?embedded=true" width="640" height="2546" frameborder="0" marginheight="0" marginwidth="0">Loading…―iframe> -->
     <div class="faq-container">
         <div class="faq-content">
             <h1 class="faq-title" style="color:white;"> Sign up </h1>
-                    <p>
-                        in progress.....
-                    </p>
+                    <h3>
+                        Fill out your details in the form below!
+                    </h3>
+                    <br>
+
+                    <button class="sign-up-button">
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfWiWEX3zt3RtvG41N863COoI2XUHkDzsOWN1Kw3V7C0F9vuQ/viewform?usp=sf_link">Sign up here!</a>
+                    </button>
             <button class="to-home-button hero-button"> <a href="index.html"> back to home! </a> </button>
         </div>
     </div> 
 
     <div class="footer">
-        <div> contact us @ucbclub@gmail.com</div>
+        <div> contact us at ucbclub@gmail.com</div>
         <div class="footer-text"> Copyright <span>&#169;</span> UC badminton club</div>
     </div>
    
