--- a/media.html
+++ b/media.html
@@ -65,7 +65,7 @@
                 <a href="./sign-up.html">Sign up </a>
                 <a  href="https://ucsa.org.nz/clubs/browse/"> Other Clubs </a>
                 <a  href="faq.html"> FAQ! </a>
-                <div>contact us at @ucbclub@gmail.com</div>
+                <div>contact us at ucbclub@gmail.com</div>
             </div>
               
             <!-- Use any element to open the sidenav -->
@@ -86,15 +86,16 @@
     <div class="faq-container">
         <div class="faq-content">
             <h1 class="faq-title" style="color:white;"> Media </h1>
-                    <p>
-                        in progress.....
-                    </p>
+                    <h3>
+                        Under construction!
+                    </h3>
+                    <img src="./images/cat-baddy.png">
             <button class="to-home-button hero-button"> <a href="index.html"> back to home! </a> </button>
         </div>
     </div> 
 
     <div class="footer">
-        <div> contact us @ucbclub@gmail.com</div>
+        <div> contact us at ucbclub@gmail.com</div>
         <div class="footer-text"> Copyright <span>&#169;</span> UC badminton club</div>
     </div>
    
