add sign up form button on homepage

--- a/index.html
+++ b/index.html
@@ -95,13 +95,15 @@
                     <p  style="font-size: 1.5em; margin: 0px; margin-bottom: 5px; opacity: 1;"> 
                         We are the <span>U</span>niversity of <span>Can</span>terbury <span>B</span>adminton <span>C</span>lub <span>(UCanBC)</span>
                     </p>
-                         <p style="font-size:1.5em;">
+                         <p style="font-size:1em;">
                             A social club welcoming all players. Most of us are University students however anyone is welcome to join!
                          </p>
                     <div id="button-container">
+                        <button id="session-button" class="sign-up-button">
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfWiWEX3zt3RtvG41N863COoI2XUHkDzsOWN1Kw3V7C0F9vuQ/viewform?usp=sf_link">Sign up here!</a>
+                        </button>
                         <button class="hero-button"> <a href=#membership-info> <span class="button-span">membership info </span></a> </button>
                         <button id="session-button" class="hero-button"> <a href=#session-info> <span class="button-span">session info </span></a> </button>
-                        <button class="hero-button faq-button"> <a href="faq.html" <span class="button-span">FAQ </span></a> </button>
                     </div>
                 </div>
             </div>
