--- a/index.html
+++ b/index.html
@@ -160,8 +160,9 @@
 
         <div class="filler-section" style="background-color: #F9FaF8"> 
             <div class="filler-container">
-                <h3> <a id="membership-info" style="font-size: 2rem">CLUB WEEK PROMO!</a> </h3>
-                <div> <img src="./images/clubs-promo-raw.png"> </div>
+                <h3> <a id="membership-info" style="font-size: 2rem">OUR PRICES!</a> </h3>
+                <h5> <em>You can purchase and play directly from any of our sessions!</em> </h5>
+                <div> <img src="./images/standard-memberships-raw.png"> </div>
             </div>
             <!-- <div class="filler-container">
                 <h3> <a id="membership-info" style="font-size: 2rem">Membership Info</a> </h3>
