update with session time s2

--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
                     </p>
                          <p style="font-size:1em;">
                             A social club welcoming all players. Most of us are University students however anyone is welcome to join!
+                            Session times:
+                            Friday: 5:45PM-8:45PM
+                            Saturday:1:00pm-3:00pm
+
+                            location: Recreation centre (Kirkwood drive)
                          </p>
                     <div id="button-container">
                         <button id="session-button" class="sign-up-button">
