make text style consistent across pages (index/faq)

--- a/faq.html
+++ b/faq.html
@@ -91,7 +91,7 @@
                             You can simply bring yourself and preferably some indoor court shoes, we have racquets and shuttles provided.
                         <h5 class="question"> Where is the Gymnasium?</h5>
                         We are located at UC Rec & Sport. <br>
-                        3351557, Upper Riccarton, Christchurch 8041
+                        <u>22 Kirkwood Drive</u>, Upper Riccarton, Christchurch 8041
                         <!-- <div class="mapouter"><div class="gmap_canvas"><iframe id="gmap_canvas" src="https://maps.google.com/maps?q=3351557,%20Upper%20Riccarton,%20Christchurch%208041&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div></div> -->
                         
                         <h5 class="question">How does the membership discount card work? </h5>
