--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                     </p>
                          <p style="font-size:1em;">
                             A social club welcoming all players. Most of us are University students however anyone is welcome to join!
+                            Feel free to come along and bring friends to any of our sessions - no sign up required
                             Session times:
                             Friday: 5:45PM-8:45PM
                             Saturday:1:00pm-3:00pm
@@ -107,8 +108,8 @@
                         <button id="session-button" class="sign-up-button">
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfWiWEX3zt3RtvG41N863COoI2XUHkDzsOWN1Kw3V7C0F9vuQ/viewform?usp=sf_link">Sign up here!</a>
                         </button>
-                        <button class="hero-button"> <a href=#membership-info> <span class="button-span">membership info </span></a> </button>
-                        <button id="session-button" class="hero-button"> <a href=#session-info> <span class="button-span">session info </span></a> </button>
+                        <button class="hero-button"> <a href=#membership-info> <span class="button-span">Membership Info </span></a> </button>
+                        <button id="session-button" class="hero-button"> <a href=#session-info> <span class="button-span">Session Info </span></a> </button>
                     </div>
                 </div>
             </div>
@@ -166,7 +167,7 @@
         <div class="filler-section" style="background-color: #F9FaF8"> 
             <div class="filler-container">
                 <h3> <a id="membership-info" style="font-size: 2rem">OUR PRICES!</a> </h3>
-                <h5> <em>You can purchase and play directly from any of our sessions!</em> </h5>
+                <h5> <em>You can purchase and play directly from any of our sessions! </em> </h5>
                 <div> <img src="./images/standard-memberships-raw.png"> </div>
             </div>
             <!-- <div class="filler-container">
