update hero image + slight SEO

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UC Badminton Club</title>
+    <meta name=""description" content="Welcome to the University of Canterbury Badminton club (UCANBC).">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
     <link rel="stylesheet" href="style.css">
 
@@ -96,18 +97,20 @@
                         We are the <span>U</span>niversity of <span>Can</span>terbury <span>B</span>adminton <span>C</span>lub <span>(UCanBC)</span>
                     </p>
                          <p style="font-size:1em;">
-                            A social club welcoming all players. Most of us are University students however anyone is welcome to join!
+                            We are a social badminton club.
                             Feel free to come along and bring friends to any of our sessions - no sign up required
-                            Session times:
-                            Friday: 5:45PM-8:45PM
-                            Saturday:1:00pm-3:00pm
-
-                            location: Recreation centre (Kirkwood drive)
+                            
+                            
+                            <address>
+                                <p style="margin: 0px;">Location: 22 Kirkwood Avenue (UC Recreation Centre) Riccarton, 8041</p>
+                                <p style="margin: 0px;""> <br> Friday: 5:45PM-8:45PM <br>
+                                    Saturday: 1:00pm-3:00pm</p>
+                            </address>
                          </p>
                     <div id="button-container">
-                        <button id="session-button" class="sign-up-button">
+                        <!-- <button id="session-button" class="sign-up-button">
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfWiWEX3zt3RtvG41N863COoI2XUHkDzsOWN1Kw3V7C0F9vuQ/viewform?usp=sf_link">Sign up here!</a>
-                        </button>
+                        </button> -->
                         <button class="hero-button"> <a href=#membership-info> <span class="button-span">Membership Info </span></a> </button>
                         <button id="session-button" class="hero-button"> <a href=#session-info> <span class="button-span">Session Info </span></a> </button>
                     </div>
