updated media page.. undr construction

--- a/media.html
+++ b/media.html
@@ -16,6 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UC Badminton Club</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="gallery.css">
     <link rel="icon" href="./images/favicon.png" type="image/png ">
 </head>
 <body onload="checkNav()">
@@ -82,8 +83,37 @@
             <a class="text-link" href="https://ucsa.org.nz/clubs/browse/"> Other-clubs </a>
         </div>
     </div>
- 
-    <div class="faq-container">
+    
+    <section id="index-gallery" class="wrapper-gallery">
+
+        <p>UCANBC</p>
+        <h2>Gallery</h2>
+        <div class="gallery-img img1">
+            <div><a href="'#'">This is a title</a></div>
+        </div>
+        <div class="gallery-img img2">
+            <div><a href="'#'">This is a title</a></div>
+        </div>
+        <div class="gallery-img img3">
+            <div><a href="'#'">This is a title</a></div>
+        </div>
+        <div class="gallery-img img4">
+            <div><a href="'#'">This is a title</a></div>
+        </div>
+        <div class="gallery-img img5">
+            <div><a href="'#'">This is a title</a></div>
+        </div>
+        <div class="gallery-img img6">
+            <div><a href="'#'">This is a title</a></div>
+        </div>
+        <div class="gallery-img img7">
+            <div><a href="'#'">This is a title</a></div>
+        </div>
+
+    </section>
+
+    <script src="./gallery.js"></script>
+    <!-- <div class="faq-container">
         <div class="faq-content">
             <h1 class="faq-title" style="color:white;"> Media </h1>
                     <h3>
@@ -92,7 +122,7 @@
                     <img src="./images/cat-baddy.png">
             <button class="to-home-button hero-button"> <a href="index.html"> back to home! </a> </button>
         </div>
-    </div> 
+    </div>  -->
 
     <div class="footer">
         <div> contact us at ucbclub@gmail.com</div>
