add scrolling view for screen devices

--- a/media.html
+++ b/media.html
@@ -135,6 +135,23 @@
         </div>
     </section>
 
+    <!-- Photo Grid -->
+<div class="row"> 
+    <div class="column">
+        <img src="./images/7_ucanbc.jpg" alt="university of canterbury hall">
+        <img src="./images/6_ucanbc.jpg" alt="university of canterbury hall">
+        <img src="./images/8_ucanbc.jpg" alt="university of canterbury hall">
+        <img src="./images/cat-baddy.png">
+    </div>
+    <div class="column">
+        <img src="./images/4_ucanbc.jpg" alt="university of canterbury hall">
+        <img src="./images/3_ucanbc.jpg" alt="university of canterbury hall">
+        <img src="./images/2_ucanbc.jpg" alt="university of canterbury hall">
+        <img src="./images/1_ucanbc.jpg" alt="university of canterbury hall">
+    </div>  
+  </div>
+
+
     <!-- <div class="faq-container">
         <div class="faq-content">
             <h1 class="faq-title" style="color:white;"> Media </h1>
