--- a/index.html
+++ b/index.html
@@ -125,37 +125,37 @@
                     <div>
                         <img class="box-img" title="comittee portrait" alt="committee portrait 1" src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>Social media</mark> <br> Ralf Alfred</div>
+                    <div class="text"> <mark>Social media</mark> <br> Vineth R</div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" title="comittee portrait" alt="committee portrait 2" src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>Treasurer</mark> <br> Jarrod Zhu</div>
+                    <div class="text"> <mark>Treasurer</mark> <br> Zi Shun</div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" title="comittee portrait" alt="committee portrait 3" src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>General Executive</mark><br> Bethany Lake</div>
+                    <div class="text"> <mark>General Executive</mark><br> Patrick C</div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" title="comittee portrait" alt="committee portrait 4" src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>General Executive</mark> <br>Daniel Maiava </div>
+                    <div class="text"> <mark>General Executive</mark> <br>  </div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" title="comittee portrait" alt="committee portrait 5"src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>Secretary</mark><br> Jack Chu</div>
+                    <div class="text"> <mark>Secretary</mark><br>Bethany L</div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" title="comittee portrait" alt="committee portrait 6" src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>President</mark> <br>Alex Long</div>
+                    <div class="text"> <mark>President</mark> <br>Okoko Anainga</div>
                 </div>
                 <div class=display-info> 
                     <div>
