add saturday time clarification

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <div class="bank-num"> <mark>Bank account: 01-0777-0086616-00</mark> </div>
             </div>
             <div class="session-container-mob"> 
-                
+                <p>THIS Week Saturday (24th February) is 2PM start!!!</p>
                 <div> <img src="images/mob-images/session-info2.JPG"> </div>
                 <div> <img src="images/mob-images/session-info3.jpeg"> </div>
             </div>
