--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
                             
                             <address>
                                 <p style="margin: 0px;">Location: 22 Kirkwood Avenue (UC Recreation Centre) Riccarton, 8041</p>
-                                <p style="margin: 0px;""> <br> THIS WEEK: 29th FEBRUARY Thursday: 6:30pm-8:30PM <br>
-                                    2nd MARCH Saturday: 2:00pm-4:00pm</p>
+                                <p style="margin: 0px;""> <br> THIS WEEK: ONLY 1 session: 9th MARCH (saturday) 1:00pm-4:00PM <br>
                             </address>
                          </p>
                     <div id="button-container">
