--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             
                             <address>
                                 <p style="margin: 0px;">Location: 22 Kirkwood Avenue (UC Recreation Centre) Riccarton, 8041</p>
-                                <p style="margin: 0px;""> <br> THIS WEEK: ONLY 1 session: 9th MARCH (saturday) 1:00pm-4:00PM <br>
+                                <p style="margin: 0px;""> <br>SESSION TIME: Fridays 7PM-9PM and Saturdays 1PM-4:PM <br>
                             </address>
                          </p>
                     <div id="button-container">
