--- a/committee.html
+++ b/committee.html
@@ -88,45 +88,45 @@
         <div class="image-container">
             <div class=display-info> 
                 <div>
-                    <img class="box-img" title="comittee portrait" alt="committee portrait 1" src="./images/shuttle-portrait.png">
-                </div>
-                <div class="text"> <mark>Social media</mark> <br> Ralf Alfred</div>
-            </div>
-            <div class=display-info> 
-                <div>
-                    <img class="box-img" title="comittee portrait" alt="committee portrait 2" src="./images/shuttle-portrait.png">
-                </div>
-                <div class="text"> <mark>Treasurer</mark> <br> Jarrod Zhu</div>
-            </div>
-            <div class=display-info> 
-                <div>
-                    <img class="box-img" title="comittee portrait" alt="committee portrait 3" src="./images/shuttle-portrait.png">
-                </div>
-                <div class="text"> <mark>General Executive</mark><br> Bethany Lake</div>
-            </div>
-            <div class=display-info> 
-                <div>
-                    <img class="box-img" title="comittee portrait" alt="committee portrait 4" src="./images/shuttle-portrait.png">
-                </div>
-                <div class="text"> <mark>General Executive</mark> <br>Daniel Maiava </div>
-            </div>
-            <div class=display-info> 
-                <div>
-                    <img class="box-img" title="comittee portrait" alt="committee portrait 5"src="./images/shuttle-portrait.png">
-                </div>
-                <div class="text"> <mark>Secretary</mark><br> Jack Chu</div>
-            </div>
-            <div class=display-info> 
-                <div>
                     <img class="box-img" title="comittee portrait" alt="committee portrait 6" src="./images/shuttle-portrait.png">
                 </div>
-                <div class="text"> <mark>President</mark> <br>Alex Long</div>
+                <div class="text"> <mark>President</mark> <br>Vineth</div>
             </div>
             <div class=display-info> 
                 <div>
                     <img class="box-img" title="comittee portrait" alt="committee portrait 7" src="./images/shuttle-portrait.png">
                 </div>
-                <div class="text"> <mark>Vice President</mark><br> Luis Lau</div>
+                <div class="text"> <mark>Vice President</mark><br> Okoko </div>
+            </div>
+            <div class=display-info> 
+                <div>
+                    <img class="box-img" title="comittee portrait" alt="committee portrait 5"src="./images/shuttle-portrait.png">
+                </div>
+                <div class="text"> <mark>Secretary</mark><br> Bethany </div>
+            </div>
+            <div class=display-info> 
+                <div>
+                    <img class="box-img" title="comittee portrait" alt="committee portrait 2" src="./images/shuttle-portrait.png">
+                </div>
+                <div class="text"> <mark>Treasurer</mark>Charisse <br></div>
+            </div>
+            <div class=display-info> 
+                <div>
+                    <img class="box-img" title="comittee portrait" alt="committee portrait 1" src="./images/shuttle-portrait.png">
+                </div>
+                <div class="text"> <mark>Social media</mark> <br> Alina</div>
+            </div>
+<!--             <div class=display-info> 
+                <div>
+                    <img class="box-img" title="comittee portrait" alt="committee portrait 3" src="./images/shuttle-portrait.png">
+                </div>
+                <div class="text"> <mark>General Executive</mark><br> </div>
+            </div> -->
+            <div class=display-info> 
+                <div>
+                    <img class="box-img" title="comittee portrait" alt="committee portrait 4" src="./images/shuttle-portrait.png">
+                </div>
+                <div class="text"> <mark>General Executive</mark> <br> Daniel </div>
             </div>
         </div>
     </div>  
