--- a/index.html
+++ b/index.html
@@ -124,43 +124,43 @@
                     <div>
                         <img class="box-img" title="comittee portrait" alt="committee portrait 1" src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>Social media</mark> <br> Vineth R</div>
+                    <div class="text"> <mark>Social media</mark> <br> John smith</div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" title="comittee portrait" alt="committee portrait 2" src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>Treasurer</mark> <br> Zi Shun</div>
+                    <div class="text"> <mark>Treasurer</mark> <br>NICK</div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" title="comittee portrait" alt="committee portrait 3" src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>General Executive</mark><br> Patrick C</div>
+                    <div class="text"> <mark>General Executive</mark><br>Jane Doe </div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" title="comittee portrait" alt="committee portrait 4" src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>General Executive</mark> <br>  </div>
+                    <div class="text"> <mark>General Executive</mark> <br>Daniel </div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" title="comittee portrait" alt="committee portrait 5"src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>Secretary</mark><br>Bethany L</div>
+                    <div class="text"> <mark>Secretary</mark><br>Bethany</div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" title="comittee portrait" alt="committee portrait 6" src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>President</mark> <br>Okoko Anainga</div>
+                    <div class="text"> <mark>President</mark> <br>Vineth</div>
                 </div>
                 <div class=display-info> 
                     <div>
                         <img class="box-img" title="comittee portrait" alt="committee portrait 7" src="./images/shuttle-portrait.png">
                     </div>
-                    <div class="text"> <mark>Vice President</mark><br> Luis Lau</div>
+                    <div class="text"> <mark>Vice President</mark><br>Okoko</div>
                 </div>
             </div>
         </div> 
